--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
 				font: 14px/20px Helvetica-Light, HelveticaNeue-Light, Helvetica Neue, Helvetica, Arial, sans-serif;
 			}
 			h1 {
-				padding: 10px 0 0;
+				padding: 10px 10px 0;
 				font-size: 48px;
 				line-height: 50px;
 				font-weight: bold;
 				text-align: center;
 			}
 			h2 {
-				padding: 0 0 20px;
+				padding: 0 10px 20px;
 				font-size: 36px;
 				line-height: 40px;
 				font-weight: normal;
 				text-align: center;
 			}
 			p {
-				padding: 10px 0;
+				padding: 10px;
 			}
 			.smalltext {
 				font-size: 11px;
