--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
 			}
 			p {
 				padding: 10px;
-			}
-			.smalltext {
-				font-size: 11px;
-				text-align: center;
+				-webkit-box-sizing: border-box;
+				-moz-box-sizing: border-box;
+				box-sizing: border-box;
 			}
 			h1, h2, p, #slider {
 				width: 960px;
@@ -172,7 +171,7 @@
 			<img src="photo3.jpg" alt="" class="slide" />
 		</section>
 		
-		<p class="smalltext">ResponsiveSlider.js is a product of <a href="http://echodesigngroup.com">Echo Design Group</a></p>
+		<p>ResponsiveSlider.js is a product of <a href="http://echodesigngroup.com">Echo Design Group</a></p>
 	</body>
 	
 </html>
