--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				padding: 10px 10px 0;
 				font-size: 48px;
 				line-height: 50px;
+				font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 				font-weight: bold;
 				text-align: center;
 			}
