Added link to the repo.

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
 	<body lang="en">
 		<h1>Responsive Slider</h1>
 		<p>A simple script to create a responsive slider. Keyboard shortcuts, touch enabled, and expandable through lazy-loading methods. More documentation coming soon.</p>
+		<p style="text-align: center">You can download or fork this at <a href="http://github.com/echodesigngrp/responsive-components">http://github.com/echodesigngrp/responsive-components</a></p>
 		
 		<h2>Demo 1</h2>
 		<p style="text-align: center"><strong>Features</strong>: keyboard access (right and left arrows) and touch</p>
@@ -194,7 +195,7 @@
 			<img src="photo3.jpg" alt="" class="slide" />
 		</section>
 		
-		<p>ResponsiveSlider.js is a product of <a href="http://echodesigngroup.com">Echo Design Group</a></p>
+		<p style="text-align: center; font-size: 12px;">ResponsiveSlider.js is a product of <a href="http://echodesigngroup.com">Echo Design Group</a></p>
 	</body>
 	
 </html>
