--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 			p {
 				padding: 10px;
 			}
-			h1, h2, p, #slider1, #slider2 {
+			h1, h2, p, #slider1, #slider2, #slider3 {
 				width: 960px;
 				margin: 0 auto;
 				-webkit-box-sizing: border-box;
 				-moz-box-sizing: border-box;
 				box-sizing: border-box;
 			}
-			#slider1, #slider2 {
+			#slider1, #slider2, #slider3 {
 				margin-bottom: 10px;
 			}
 			.slide {
@@ -77,7 +77,7 @@
 			}
 			
 			@media only screen and (min-width: 720px) and (max-width: 959px) {
-				h1, h2, p, #slider1, #slider2 {
+				h1, h2, p, #slider1, #slider2, #slider3 {
 					width: 720px;
 				}
 				.slide {
@@ -90,7 +90,7 @@
 			}
 			
 			@media only screen and (min-width: 600px) and (max-width: 719px) {
-				h1, h2, p, #slider1, #slider2 {
+				h1, h2, p, #slider1, #slider2, #slider3 {
 					width: 600px;
 				}
 				.slide {
@@ -103,7 +103,7 @@
 			}
 			
 			@media only screen and (min-width: 480px) and (max-width: 599px) {
-				h1, h2, p, #slider1, #slider2 {
+				h1, h2, p, #slider1, #slider2, #slider3 {
 					width: 480px;
 				}
 				.slide {
@@ -120,7 +120,7 @@
 			}
 			
 			@media only screen and (max-width: 479px) {
-				h1, h2, p, #slider1, #slider2 {
+				h1, h2, p, #slider1, #slider2, #slider3 {
 					width: 320px;
 				}
 				.slide {
@@ -159,13 +159,20 @@
 					'infinite': false,
 					'keyboard': true
 				});
-			});
-			$(function () {
+				
 				$('#slider2').responsiveSlider({
 					'nextClass': 'next',
 					'previousClass': 'previous',
 					'containerClass': 'container',
 					'infinite': true,
+					'keyboard': false
+				});
+				
+				$('#slider3').responsiveSlider({
+					'nextClass': 'next',
+					'previousClass': 'previous',
+					'containerClass': 'container',
+					'automate': true,
 					'keyboard': false
 				});
 			});
@@ -190,6 +197,15 @@
 		<p style="text-align: center"><strong>Features</strong>: touch and infinite</p>
 		
 		<section id="slider2">
+			<img src="photo1.jpg" alt="" class="slide" />
+			<img src="photo2.jpg" alt="" class="slide" />
+			<img src="photo3.jpg" alt="" class="slide" />
+		</section>
+		
+		<h2>Demo 3</h2>
+		<p style="text-align: center"><strong>Features</strong>: touch and automate</p>
+		
+		<section id="slider3">
 			<img src="photo1.jpg" alt="" class="slide" />
 			<img src="photo2.jpg" alt="" class="slide" />
 			<img src="photo3.jpg" alt="" class="slide" />
