Removed navigation from demo 3

--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
 					'previousClass': 'previous',
 					'containerClass': 'container',
 					'automate': true,
-					'keyboard': false
+					'keyboard': false,
+					'navigation': false
 				});
 			});
 		</script>
@@ -203,7 +204,7 @@
 		</section>
 		
 		<h2>Demo 3</h2>
-		<p style="text-align: center"><strong>Features</strong>: touch and automate</p>
+		<p style="text-align: center"><strong>Features</strong>: touch, automate, and no navigation</p>
 		
 		<section id="slider3">
 			<img src="photo1.jpg" alt="" class="slide" />
