--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
 				margin: 0 auto;
 				border: 3px solid #5A1B52;
 				border-bottom: none;
+				border-top-left-radius: 7px;
+				border-top-right-radius: 7px;
 			}
 			#paged_slider .slide {
 				display: block;
