Turned touch off on second demo until infinite cycling supports touch

--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
 					'previousClass': 'previous',
 					'containerClass': 'container',
 					'infinite': true,
+					'touch': false,
 					'keyboard': false
 				});
 				
@@ -323,7 +324,7 @@
 		</section>
 		
 		<h2>Demo 2</h2>
-		<p style="text-align: center"><strong>Features</strong>: touch and infinite</p>
+		<p style="text-align: center"><strong>Features</strong>: infinite</p>
 		
 		<section id="slider2">
 			<img src="photo1.jpg" alt="" class="slide" />
