Some small pizazz for iOS

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 			}
 			#slider1, #slider2, #slider3 {
 				margin-bottom: 10px;
+				background: #eee;
+				-webkit-box-shadow: inset 0 5px 15px rgba(0, 0, 0, .25);
 			}
 			#slider1 .slide, #slider2 .slide, #slider3 .slide {
 				display: block;
