--- a/index.html
+++ b/index.html
@@ -7,269 +7,9 @@
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link rel="stylesheet" media="all" href=""/>
+		<link rel="stylesheet" media="all" href="style.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 		<!-- Adding "maximum-scale=1" fixes the Mobile Safari auto-zoom bug: http://filamentgroup.com/examples/iosScaleBug/ -->
-		
-		<style>
-			body {
-				margin: 0;
-				padding: 0;
-				
-				font: 14px/20px Helvetica-Light, HelveticaNeue-Light, Helvetica Neue, Helvetica, Arial, sans-serif;
-			}
-			h1 {
-				padding: 10px;
-				font-size: 48px;
-				line-height: 50px;
-				font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-				font-weight: bold;
-				text-align: center;
-			}
-			h2 {
-				padding: 0 10px 10px;
-				font-size: 36px;
-				line-height: 40px;
-				font-weight: normal;
-				text-align: center;
-			}
-			p {
-				padding: 10px;
-			}
-			h1, h2, p, #slider1, #slider2, #slider3 {
-				width: 960px;
-				margin: 0 auto;
-				-webkit-box-sizing: border-box;
-				-moz-box-sizing: border-box;
-				box-sizing: border-box;
-			}
-			#slider1, #slider2, #slider3 {
-				margin-bottom: 10px;
-				background: #eee;
-				-webkit-box-shadow: inset 0 5px 15px rgba(0, 0, 0, .25);
-			}
-			#slider1 .slide, #slider2 .slide, #slider3 .slide {
-				display: block;
-				width: 960px;
-				height: 400px;
-			}
-			.container {
-				z-index: 10;
-			}
-			#slider1 .next, #slider2 .next, #slider3 .next, #slider1 .previous, #slider2 .previous, #slider3 .previous {
-				position: absolute;
-				top: 180px;
-				z-index: 20;
-				width: 100px;
-				height: 40px;
-				background: #fff;
-				background: rgba(255, 255, 255, .9);
-				color: #000;
-				font: bold 14px/40px Helvetica;
-				line-height: 40px;
-				text-decoration: none;
-				text-transform: uppercase;
-				text-align: center;
-			}
-			#slider1 .next, #slider2 .next, #slider3 .next {
-				right: 0;
-			}
-			#slider1 .previous, #slider2 .previous, #slider3 .previous {
-				left: 0;
-			}
-			
-			#paged_slider {
-				width: 954px;
-				margin: 0 auto;
-				border: 3px solid #5A1B52;
-				border-bottom: none;
-				border-top-left-radius: 7px;
-				border-top-right-radius: 7px;
-			}
-			#paged_slider .slide {
-				display: block;
-				width: 318px;
-				height: 180px;
-				padding: 10px;
-				border-bottom: 30px solid #5A1B52;
-				-webkit-box-sizing: border-box;
-				-moz-box-sizing: border-box;
-				box-sizing: border-box;
-			}
-			#paged_slider .slide h1 {
-				margin: 0;
-				padding: 0;
-				font-family: Helvetica-Light, HelveticaNeue-Light, Helvetica Neue, Helvetica, Arial, sans-serif;
-				font-size: 24px;
-				line-height: 30px;
-				font-weight: normal;
-				text-align: left;
-			}
-			#paged_slider .slide p {
-				width: auto;
-				padding: 0;
-			}
-			.container {
-				z-index: 10;
-			}
-			#paged_slider .bar {
-				position: absolute;
-				bottom: 0;
-				left: 0;
-				z-index: 15;
-				width: 100%;
-				height: 30px;
-				background: #5A1B52;
-			}
-			#paged_slider .next, #paged_slider .previous {
-				position: absolute;
-				bottom: 0;
-				z-index: 20;
-				height: 30px;
-				color: #fff;
-				font: bold 14px/40px Helvetica;
-				line-height: 30px;
-				text-decoration: none;
-				text-transform: uppercase;
-				text-align: center;
-			}
-			#paged_slider .next {
-				right: 6px;
-				text-align: right;
-			}
-			#paged_slider .previous {
-				left: 6px;
-				text-align: left;
-			}
-			
-			@media only screen and (min-width: 720px) and (max-width: 959px) {
-				h1, h2, p, #slider1, #slider2, #slider3 {
-					width: 720px;
-				}
-				#slider1 .slide, #slider2 .slide, #slider3 .slide {
-					width: 720px;
-					height: 300px;
-				}
-				#slider1 .next, #slider2 .next, #slider3 .next, #slider1 .previous, #slider2 .previous, #slider3 .previous {
-					top: 130px;
-				}
-			}
-			
-			@media only screen and (min-width: 600px) and (max-width: 719px) {
-				h1, h2, p, #slider1, #slider2, #slider3 {
-					width: 600px;
-				}
-				#slider1 .slide, #slider2 .slide, #slider3 .slide {
-					width: 600px;
-					height: 250px;
-				}
-				#slider1 .next, #slider2 .next, #slider3 .next, #slider1 .previous, #slider2 .previous, #slider3 .previous {
-					top: 105px;
-				}
-			}
-			
-			@media only screen and (min-width: 480px) and (max-width: 599px) {
-				h1, h2, p, #slider1, #slider2, #slider3 {
-					width: 480px;
-				}
-				#slider1 .slide, #slider2 .slide, #slider3 .slide {
-					width: 480px;
-					height: 200px;
-				}
-				#slider1 .next, #slider2 .next, #slider3 .next, #slider1 .previous, #slider2 .previous, #slider3 .previous {
-					top: 118px;
-					width: 80px;
-					height: 30px;
-					font-size: 12px;
-					line-height: 30px;
-				}
-			}
-			
-			@media only screen and (max-width: 479px) {
-				h1, h2, p, #slider1, #slider2, #slider3 {
-					width: 320px;
-				}
-				#slider1 .slide, #slider2 .slide, #slider3 .slide {
-					width: 320px;
-					height: 133px;
-				}
-				#slider1 .next, #slider2 .next, #slider3 .next, #slider1 .previous, #slider2 .previous, #slider3 .previous {
-					top: 98px;
-					width: 80px;
-					height: 30px;
-					font-size: 10px;
-					line-height: 30px;
-				}
-			}
-			
-			@media only screen and (max-width: 599px) {
-				h1 {
-					font-size: 36px;
-					line-height: 40px;
-				}
-				h2 {
-					font-size: 24px;
-					line-height: 30px;
-				}
-			}
-			
-			@media only screen and (min-width: 720px) and (max-width: 959px) {
-				#paged_slider {
-					width: 714px;
-				}
-				#paged_slider .slide {
-					width: 238px;
-				}
-				#paged_slider .slide p {
-					height: 100px;
-					overflow: hidden;
-					text-overflow: ellipsis;
-				}
-			}
-			
-			@media only screen and (min-width: 600px) and (max-width: 719px) {
-				#paged_slider {
-					width: 594px;
-				}
-				#paged_slider .slide {
-					width: 297px;
-				}
-				#paged_slider .slide p {
-					height: 100px;
-					overflow: hidden;
-					text-overflow: ellipsis;
-				}
-			}
-			
-			@media only screen and (min-width: 480px) and (max-width: 599px) {
-				#paged_slider {
-					width: 474px;
-				}
-				#paged_slider .slide {
-					width: 237px;
-				}
-				#paged_slider .slide p {
-					height: 100px;
-					overflow: hidden;
-					text-overflow: ellipsis;
-				}
-			}
-			
-			@media only screen and (max-width: 479px) {
-				#paged_slider {
-					width: 314px;
-				}
-				#paged_slider .slide {
-					width: 314px;
-					height: 160px;
-				}
-				#paged_slider .slide p {
-					height: 80px;
-					overflow: hidden;
-					text-overflow: ellipsis;
-				}
-			}
-		</style>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js" type="text/javascript"></script>
 		<script src="responsiveslider.js" type="text/javascript"></script>
@@ -279,7 +19,16 @@
 					'nextClass': 'next',
 					'previousClass': 'previous',
 					'containerClass': 'container',
-					'keyboard': true
+					'keyboard': true,
+					'pagination': true,
+					'paginationClass': 'pagination',
+					'paginationPageClass': 'page',
+					'onResize': function (slider) {
+						var paginationWidth = slider.pagination.width();
+						var width = slider.el.width();
+						var left = (width - paginationWidth) / 2
+						slider.pagination.css('left', left);
+					}
 				});
 				
 				$('#slider2').responsiveSlider({
