--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<p style="text-align: center">You can download or fork this at <a href="http://github.com/echodesigngrp/responsive-components">http://github.com/echodesigngrp/responsive-components</a></p>
 		
 		<h2>Demo 1</h2>
-		<p style="text-align: center"><strong>Features</strong>: keyboard access (right and left arrows) and touch</p>
+		<p style="text-align: center"><strong>Features</strong>: pagination, keyboard access (right and left arrows) and touch</p>
 		
 		<section id="slider1">
 			<img src="photo1.jpg" alt="" class="slide" />
