Added ResponsiveImage.js demo.

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
 		<h1>Responsive Components</h1>
 		<h2><a href="ResponsiveSlider/index.html">Slider</a></h2>
 		<p>A simple script to create a responsive slider. Keyboard shortcuts, touch enabled, and expandable through lazy-loading methods. More documentation coming soon.</p>
+		<h2><a href="ResponsiveImage/index.html">Image</a></h2>
+		<p>This is a simple solution for mobile-first images. Specify the mobile image, and provide data- attributes for any higher res images needed. Includes support for retina images. This makes sure that the browser only loads what is necessary.</p>
 		<p style="text-align: center">You can download or fork this at <a href="http://github.com/echodesigngrp/responsive-components">http://github.com/echodesigngrp/responsive-components</a></p>
 		
 		<p style="text-align: center; font-size: 12px;">ResponsiveSlider.js is a product of <a href="http://echodesigngroup.com">Echo Design Group</a></p>
