Added tablet retina support.
iPad 3 is coming, guys.

--- a/ResponsiveImage/index.html
+++ b/ResponsiveImage/index.html
@@ -62,7 +62,7 @@
 		<p style="text-align: center">You can download or fork this at <a href="http://github.com/echodesigngrp/responsive-components">http://github.com/echodesigngrp/responsive-components</a></p>
 		
 		<div class="container">
-			<img src="photo_mobile.jpg" data-mobile-retina="photo_retina.jpg" data-small-tablet="photo_smalltablet.jpg" data-tablet="photo_tablet.jpg" data-desktop="photo_desktop.jpg" />
+			<img src="photo_mobile.jpg" data-mobile-retina="photo_retina.jpg" data-small-tablet="photo_smalltablet.jpg" data-tablet="photo_tablet.jpg" data-tablet-retina="photo_retina_tablet.jpg" data-desktop="photo_desktop.jpg" />
 		</div>
 		
 		<p style="text-align: center; font-size: 12px;">ResponsiveSlider.js is a product of <a href="http://echodesigngroup.com">Echo Design Group</a></p>
