--- a/ResponsiveSlider/index.html
+++ b/ResponsiveSlider/index.html
@@ -75,6 +75,7 @@
 	</head>
 	
 	<body lang="en">
+		<div class="breadcrumbs"><a href="../">more responsive components</a></div>
 		<h1>Responsive Slider</h1>
 		<p>A simple script to create a responsive slider. Keyboard shortcuts, touch enabled, and expandable through lazy-loading methods. More documentation coming soon.</p>
 		<p style="text-align: center">You can download or fork this at <a href="http://github.com/echodesigngrp/responsive-components">http://github.com/echodesigngrp/responsive-components</a></p>
