--- a/ResponsiveImage/index.html
+++ b/ResponsiveImage/index.html
@@ -57,6 +57,7 @@
 	</head>
 	
 	<body lang="en">
+		<div class="breadcrumbs"><a href="../">more responsive components</a></div>
 		<h1>Responsive Image</h1>
 		<p>This is a simple solution for mobile-first images. Specify the mobile image, and provide data- attributes for any higher res images needed. Includes support for retina images. This makes sure that the browser only loads what is necessary.</p>
 		<p style="text-align: center">You can download or fork this at <a href="http://github.com/echodesigngrp/responsive-components">http://github.com/echodesigngrp/responsive-components</a></p>
