Added ResponsiveImage.js to ResponsiveSlider.js demos.

--- a/ResponsiveSlider/index.html
+++ b/ResponsiveSlider/index.html
@@ -13,8 +13,11 @@
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js" type="text/javascript"></script>
 		<script src="responsiveslider.js" type="text/javascript"></script>
+		<script src="../ResponsiveImage/responsiveimage.js" type="text/javascript"></script>
 		<script type="text/javascript">
 			$(function () {
+				$('img').responsiveImage();
+				
 				$('#slider1').responsiveSlider({
 					'nextClass': 'next',
 					'previousClass': 'previous',
@@ -84,27 +87,27 @@
 		<p style="text-align: center"><strong>Features</strong>: pagination, keyboard access (right and left arrows) and touch</p>
 		
 		<section id="slider1">
-			<img src="photo1.jpg" alt="" class="slide" />
-			<img src="photo2.jpg" alt="" class="slide" />
-			<img src="photo3.jpg" alt="" class="slide" />
+			<img src="photo1_mobile.jpg" data-mobile-retina="photo1_retina.jpg" data-small-tablet="photo1_small_tablet.jpg" data-tablet="photo1_tablet.jpg" data-desktop="photo1.jpg" alt="" class="slide" />
+			<img src="photo2_mobile.jpg" data-mobile-retina="photo2_retina.jpg" data-small-tablet="photo2_small_tablet.jpg" data-tablet="photo2_tablet.jpg" data-desktop="photo2.jpg" alt="" class="slide" />
+			<img src="photo3_mobile.jpg" data-mobile-retina="photo3_retina.jpg" data-small-tablet="photo3_small_tablet.jpg" data-tablet="photo3_tablet.jpg" data-desktop="photo3.jpg" alt="" class="slide" />
 		</section>
 		
 		<h2>Demo 2</h2>
 		<p style="text-align: center"><strong>Features</strong>: infinite and custom pagination</p>
 		
 		<section id="slider2">
-			<img src="photo1.jpg" alt="" data-thumb="photo1_thumb.jpg" data-square="photo1_square.jpg" class="slide" />
-			<img src="photo2.jpg" alt="" data-thumb="photo2_thumb.jpg" data-square="photo2_square.jpg" class="slide" />
-			<img src="photo3.jpg" alt="" data-thumb="photo3_thumb.jpg" data-square="photo3_square.jpg" class="slide" />
+			<img src="photo1_mobile.jpg" data-mobile-retina="photo1_retina.jpg" data-small-tablet="photo1_small_tablet.jpg" data-tablet="photo1_tablet.jpg" data-desktop="photo1.jpg" data-thumb="photo1_thumb.jpg" data-square="photo1_square.jpg" alt="" class="slide" />
+			<img src="photo2_mobile.jpg" data-mobile-retina="photo2_retina.jpg" data-small-tablet="photo2_small_tablet.jpg" data-tablet="photo2_tablet.jpg" data-desktop="photo2.jpg" data-thumb="photo2_thumb.jpg" data-square="photo2_square.jpg" alt="" class="slide" />
+			<img src="photo3_mobile.jpg" data-mobile-retina="photo3_retina.jpg" data-small-tablet="photo3_small_tablet.jpg" data-tablet="photo3_tablet.jpg" data-desktop="photo3.jpg" data-thumb="photo3_thumb.jpg" data-square="photo3_square.jpg" alt="" class="slide" />
 		</section>
 		
 		<h2>Demo 3</h2>
 		<p style="text-align: center"><strong>Features</strong>: touch, automate, and no navigation</p>
 		
 		<section id="slider3">
-			<img src="photo1.jpg" alt="" class="slide" />
-			<img src="photo2.jpg" alt="" class="slide" />
-			<img src="photo3.jpg" alt="" class="slide" />
+			<img src="photo1_mobile.jpg" data-mobile-retina="photo1_retina.jpg" data-small-tablet="photo1_small_tablet.jpg" data-tablet="photo1_tablet.jpg" data-desktop="photo1.jpg" alt="" class="slide" />
+			<img src="photo2_mobile.jpg" data-mobile-retina="photo2_retina.jpg" data-small-tablet="photo2_small_tablet.jpg" data-tablet="photo2_tablet.jpg" data-desktop="photo2.jpg" alt="" class="slide" />
+			<img src="photo3_mobile.jpg" data-mobile-retina="photo3_retina.jpg" data-small-tablet="photo3_small_tablet.jpg" data-tablet="photo3_tablet.jpg" data-desktop="photo3.jpg" alt="" class="slide" />
 		</section>
 		
 		<h2>Demo 4</h2>
